[package]
name = "stockfighter-api"
version = "0.1.0"
license = "MIT"
authors = ["Jonathan Castello <twisolar@gmail.com>"]

description = "Lightweight wrapper around the Stockfighter API (https://www.stockfighter.io/)"
repository = "https://github.com/Twisol/rust-stockfighter-api"

[dependencies]
chrono = "0.2.17"
hyper = "0.7.0"
serde_json = "0.6.0"
